added imgs and icons

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
             <p>
                 Hello World!
             </p>
+            <svg>
+                <use xlink:href="./assets/img/icons/sprites.svg#icon-arrow_right_alt"></use>
+            </svg>
         </div>
     </div>
 </div>
