added font family avenir next

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <!--UNCOMMENT THIS WHEN PUBLISH-->
     <!--<link rel="stylesheet" href="assets/css/style.comp.css">-->
     <title>Altran</title>
+<!--    <svg>-->
+<!--        <use xlink:href="./assets/img/icons/sprites.svg#icon-arrow_right_alt"></use>-->
+<!--    </svg>-->
 </head>
 <body>
 
@@ -18,9 +21,6 @@
             <p>
                 Hello World!
             </p>
-            <svg>
-                <use xlink:href="./assets/img/icons/sprites.svg#icon-arrow_right_alt"></use>
-            </svg>
         </div>
     </div>
 </div>
