improved font size breakpoints

--- a/index.html
+++ b/index.html
@@ -9,21 +9,41 @@
     <!--UNCOMMENT THIS WHEN PUBLISH-->
     <!--<link rel="stylesheet" href="assets/css/style.comp.css">-->
     <title>Altran</title>
-<!--    <svg>-->
-<!--        <use xlink:href="./assets/img/icons/sprites.svg#icon-arrow_right_alt"></use>-->
-<!--    </svg>-->
+    <!--    <svg>-->
+    <!--        <use xlink:href="./assets/img/icons/sprites.svg#icon-arrow_right_alt"></use>-->
+    <!--    </svg>-->
 </head>
 <body>
 
-<div class="container">
+<header class="header container">
     <div class="row">
-        <div class="col-12">
-            <p>
-                Hello World!
-            </p>
+        <div class="col-6">
+            <ul class="header__list">
+                <li class="header__list-item">
+                    About us
+                </li>
+                <li class="header__list-item">
+                    Industries
+                </li>
+                <li class="header__list-item">
+                    Newsroom
+                </li>
+                <li class="header__list-item">
+                    Insights
+                </li>
+                <li class="header__list-item">
+                    Finance
+                </li>
+                <li class="header__list-item">
+                    Careers
+                </li>
+            </ul>
+        </div>
+        <div class="col-6">
+
         </div>
     </div>
-</div>
+</header>
 
 </body>
 </html>
