added header content on hover

--- a/index.html
+++ b/index.html
@@ -9,38 +9,103 @@
     <!--UNCOMMENT THIS WHEN PUBLISH-->
     <!--<link rel="stylesheet" href="assets/css/style.comp.css">-->
     <title>Altran</title>
-    <!--    <svg>-->
-    <!--        <use xlink:href="./assets/img/icons/sprites.svg#icon-arrow_right_alt"></use>-->
-    <!--    </svg>-->
 </head>
 <body>
 
-<header class="header container">
+<!--=============== DESKTOP HEADER ===============-->
+<header class="header container position--relative">
     <div class="row">
-        <div class="col-6">
-            <ul class="header__list">
-                <li class="header__list-item">
-                    About us
+        <div class="col-12 d-flex justify-content-between align-items-center">
+            <div>
+                <ul class="header__list d-flex">
+                    <li class="header__list-item text--md text--semi-bold text--blue text--uppercase mr-3">
+                        <p class="header__list-title">
+                            About us
+                        </p>
+                        <div class="header__content position--absolute">
+                            <div class="header__content--transparent"></div>
+                            <div class="bg--blue">
+                                <p class="text--white">About us</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="header__list-item text--md text--semi-bold text--blue text--uppercase mr-3">
+                        <p class="header__list-title">
+                            Industries
+                        </p>
+                        <div class="header__content position--absolute">
+                            <div class="header__content--transparent"></div>
+                            <div class="bg--blue">
+                                <p class="text--white">Industries</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="header__list-item text--md text--semi-bold text--blue text--uppercase mr-3">
+                        <p class="header__list-title">
+                            Newsroom
+                        </p>
+                        <div class="header__content position--absolute">
+                            <div class="header__content--transparent"></div>
+                            <div class="bg--blue">
+                                <p class="text--white">Newsroom</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="header__list-item text--md text--semi-bold text--blue text--uppercase mr-3">
+                        <p class="header__list-title">
+                            Insights
+                        </p>
+                    </li>
+                    <li class="header__list-item text--md text--semi-bold text--blue text--uppercase mr-3">
+                        <p class="header__list-title">
+                            Finance
+                        </p>
+                        <div class="header__content position--absolute">
+                            <div class="header__content--transparent"></div>
+                            <div class="bg--blue">
+                                <p class="text--white">Finance</p>
+                            </div>
+                        </div>
+                    </li>
+                    <li class="header__list-item text--md text--semi-bold text--blue text--uppercase">
+                        <p class="header__list-title">
+                            Careers
+                        </p>
+                        <div class="header__content position--absolute">
+                            <div class="header__content--transparent"></div>
+                            <div class="bg--blue">
+                                <p class="text--white">Careers</p>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+            <ul class="d-flex">
+                <li class="header__menu d-flex flex-column align-items-center">
+                    <svg class="header__menu-icon mb-2">
+                        <use xlink:href="./assets/img/icons/sprites.svg#icon-search"></use>
+                    </svg>
+                    <p class="text--xs text--bold text--blue text--uppercase">
+                        Search
+                    </p>
                 </li>
-                <li class="header__list-item">
-                    Industries
+                <li class="header__menu d-flex flex-column align-items-center">
+                    <svg class="header__menu-icon mb-2">
+                        <use xlink:href="./assets/img/icons/sprites.svg#icon-phone"></use>
+                    </svg>
+                    <p class="text--xs text--bold text--blue text--uppercase">
+                        Contact
+                    </p>
                 </li>
-                <li class="header__list-item">
-                    Newsroom
-                </li>
-                <li class="header__list-item">
-                    Insights
-                </li>
-                <li class="header__list-item">
-                    Finance
-                </li>
-                <li class="header__list-item">
-                    Careers
+                <li class="header__menu d-flex flex-column align-items-center">
+                    <svg class="header__menu-icon mb-2">
+                        <use xlink:href="./assets/img/icons/sprites.svg#icon-world"></use>
+                    </svg>
+                    <p class="text--xs text--bold text--blue text--uppercase">
+                        Locations
+                    </p>
                 </li>
             </ul>
-        </div>
-        <div class="col-6">
-
         </div>
     </div>
 </header>
