finished banner section

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
             </li>
             <li class="u--mb-45">
                 <a class="header--mobile__list-item no--decoration text--uppercase" href="#">
-                    Industrialized Globalhore
+                    Industrialized Globalshore&reg;
                 </a>
             </li>
             <li>
@@ -565,5 +565,75 @@
         </ul>
     </div>
 </header>
+<!--=============== DESKTOP LOGO ===============-->
+<div class="container d-none d-lg-block mt-3 mb-5">
+    <div class="row justify-content-center">
+        <div class="col-auto">
+            <img src="./assets/img/logo.svg" alt="Logo" class="logo">
+        </div>
+    </div>
+</div>
+<!--=============== DESKTOP MENU LIST ===============-->
+<div class="container d-none d-lg-block">
+    <div class="row">
+        <div class="col-12">
+            <ul class="d-flex justify-content-center list--unstyled">
+                <li class="list__menu d-flex align-items-center mr-3">
+                    <a href="#" class="no--decoration text--md text--uppercase text--black text--semi-bold">
+                        Consulting
+                    </a>
+                </li>
+                <li class="list__menu d-flex align-items-center mr-3">
+                    <a href="#" class="no--decoration text--md text--uppercase text--black text--semi-bold">
+                        Digital
+                    </a>
+                </li>
+                <li class="list__menu d-flex align-items-center mr-3">
+                    <a href="#" class="no--decoration text--md text--uppercase text--black text--semi-bold">
+                        Engineering
+                    </a>
+                </li>
+                <li class="list__menu d-flex align-items-center mr-3">
+                    <a href="#" class="no--decoration text--md text--uppercase text--black text--semi-bold">
+                        World Class Centers
+                    </a>
+                </li>
+                <li class="list__menu d-flex align-items-center mr-3">
+                    <a href="#" class="no--decoration text--md text--uppercase text--black text--semi-bold">
+                        Industrialized Globalshore&reg;
+                    </a>
+                </li>
+                <li>
+                    <a href="#" class="no--decoration text--md text--uppercase text--black text--semi-bold">
+                        Cambridge Consultants
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+<!--=============== BANNER ===============-->
+<section class="container-fluid container-lg mt-lg-3">
+    <div class="row">
+        <div class="banner col-12 position--relative">
+            <img class="banner__img position--absolute h-100 w-100" src="./assets/img/banner/bannerLights.jpg"
+                 alt="Lights">
+            <div class="banner__points banner__points--top position--absolute"></div>
+            <h6 class="banner__text d-inline-block heading--six text--white text--uppercase text--bold pb-2">
+                Techvision
+            </h6>
+            <h1 class="heading--one text--white text--uppercase text--bold mt-4 mb-lg-5 mb-4">
+                Seeking digital alpha
+            </h1>
+            <h3 class="heading--three text--white text--bold mb-5">
+                Getting real about digital ambitions
+            </h3>
+            <button class="btn btn--yellow btn--xl text--bold text--uppercase position--relative">
+                <span class="position--relative">Read more</span>
+            </button>
+            <div class="banner__points banner__points--bottom position--absolute"></div>
+        </div>
+    </div>
+</section>
 </body>
 </html>
