finished info section

--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
                         Industrialized Globalshore&reg;
                     </a>
                 </li>
-                <li>
+                <li class="list__menu  d-flex align-items-center">
                     <a href="#" class="no--decoration text--md text--uppercase text--black text--semi-bold">
                         Cambridge Consultants
                     </a>
@@ -613,16 +613,16 @@
     </div>
 </div>
 <!--=============== BANNER ===============-->
-<section class="container-fluid container-lg mt-lg-3">
-    <div class="row">
-        <div class="banner col-12 position--relative">
+<div class="container-fluid mt-lg-3">
+    <div class="row justify-content-center">
+        <div class="banner col-12 col-xl-10 position--relative">
             <img class="banner__img position--absolute h-100 w-100" src="./assets/img/banner/bannerLights.jpg"
                  alt="Lights">
             <div class="banner__points banner__points--top position--absolute"></div>
             <h6 class="banner__text d-inline-block heading--six text--white text--uppercase text--bold pb-2">
                 Techvision
             </h6>
-            <h1 class="heading--one text--white text--uppercase text--bold mt-4 mb-lg-5 mb-4">
+            <h1 class="heading--one text--white text--uppercase text--bold mt-4 mb-4">
                 Seeking digital alpha
             </h1>
             <h3 class="heading--three text--white text--bold mb-5">
@@ -634,6 +634,73 @@
             <div class="banner__points banner__points--bottom position--absolute"></div>
         </div>
     </div>
-</section>
+</div>
+<!--=============== SECTION INFOS ===============-->
+<div class="container mt-4 mb-5">
+    <div class="row">
+        <div class="col-12 col-md-4 d-flex flex-column align-items-start mt-3 mb-3 m-md-0">
+            <h5 class="text--lg text--center text--uppercase text--bold">
+                Press releases
+            </h5>
+            <img class="info__img mt-4 mb-4" src="./assets/img/info/infoRelease.jpg" alt="Info Releases">
+            <h5 class="text--lg text--bold text--uppercase text--blue mb-3">
+                Capgemini friendly tender offer
+            </h5>
+            <p class="flex-grow-1 mb-5"></p>
+            <a class="info__anchor" href="#">
+                <svg class="info__anchor-icon">
+                    <use xlink:href="./assets/img/icons/sprites.svg#icon-arrow_right_alt"></use>
+                </svg>
+                Read more news
+            </a>
+        </div>
+        <div class="col-12 col-md-4 d-flex flex-column align-items-start mt-3 mb-3 m-md-0">
+            <h5 class="text--lg text--center text--uppercase text--bold">
+                Insights
+            </h5>
+            <img class="info__img mt-4 mb-4" src="./assets/img/info/infoInsights.png" alt="Info Insights">
+            <h5 class="text--lg text--bold text--uppercase text--blue mb-3">
+                Did you know - shift happened
+            </h5>
+            <p class="flex-grow-1 text--lg mb-5">
+                Did you know that the world is living a new equilibrium. Find out more in the Shift Happened video
+                presented
+                during the Strategic Plan: The High Road, Altran 2022.
+            </p>
+            <a class="info__anchor" href="#">
+                <svg class="info__anchor-icon">
+                    <use xlink:href="./assets/img/icons/sprites.svg#icon-arrow_right_alt"></use>
+                </svg>
+                See all insights' articles
+            </a>
+        </div>
+        <div class="col-12 col-md-4 d-flex flex-column align-items-start mt-3 mb-3 m-md-0">
+            <h5 class="text--lg text--center text--uppercase text--bold">
+                Careers
+            </h5>
+            <img class="info__img mt-4 mb-4" src="./assets/img/info/infoCareers.jpg" alt="Info Careers">
+            <h5 class="text--lg text--bold text--uppercase text--blue mb-3">
+                Realize your full potential with Altran
+            </h5>
+            <p class="flex-grow-1 text--lg mb-5">
+                An international career at the cutting edge of innovation
+            </p>
+            <a class="info__anchor" href="#">
+                <svg class="info__anchor-icon">
+                    <use xlink:href="./assets/img/icons/sprites.svg#icon-arrow_right_alt"></use>
+                </svg>
+                Apply now
+            </a>
+        </div>
+    </div>
+</div>
+<!--=============== SECTION CARDS ===============-->
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-12">
+
+        </div>
+    </div>
+</div>
 </body>
 </html>
