--- a/index.html
+++ b/index.html
@@ -695,10 +695,103 @@
     </div>
 </div>
 <!--=============== SECTION CARDS ===============-->
-<div class="container-fluid">
+<div class="section-cards container-fluid container-lg pb-5">
     <div class="row">
         <div class="col-12">
-
+            <h3 class="heading--three text--uppercase text--bold text--center mt-5">
+                Which sector do you work in?
+            </h3>
+            <h5 class="heading--five text--uppercase text--bold text--center mt-3 mb-5">
+                We provide tailored solutions for each industry
+            </h5>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+            <div class="card d-flex flex-column">
+                <img class="card__img" src="./assets/img/card/cardCar.png" alt="Car">
+                <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
+                    Automotive
+                </p>
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+            <div class="card d-flex flex-column">
+                <img class="card__img" src="./assets/img/card/cardAirplane.png" alt="Airplane">
+                <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
+                    Aeronautics
+                </p>
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+            <div class="card d-flex flex-column">
+                <img class="card__img" src="./assets/img/card/cardSpace.png" alt="Space">
+                <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
+                    Space, Defense & Naval
+                </p>
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+            <div class="card d-flex flex-column">
+                <img class="card__img" src="./assets/img/card/cardRail.png" alt="Rail">
+                <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
+                    Rail, Infrastructure & Transportation
+                </p>
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+            <div class="card d-flex flex-column">
+                <img class="card__img" src="./assets/img/card/cardSunEnergy.png" alt="Energy">
+                <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
+                    Energy
+                </p>
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+            <div class="card d-flex flex-column">
+                <img class="card__img" src="./assets/img/card/cardIndustry.png" alt="Industry">
+                <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
+                    Industrials & Electronics
+                </p>
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+            <div class="card d-flex flex-column">
+                <img class="card__img" src="./assets/img/card/cardHeart.png" alt="Heart">
+                <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
+                    Life Sciences
+                </p>
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+            <div class="card d-flex flex-column">
+                <img class="card__img" src="./assets/img/card/cardPhone.png" alt="Phone">
+                <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
+                    Telecom & Media
+                </p>
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+            <div class="card d-flex flex-column">
+                <img class="card__img" src="./assets/img/card/cardMonitor.png" alt="Monitor">
+                <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
+                    Finance & Public Sector
+                </p>
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+            <div class="card d-flex flex-column">
+                <img class="card__img" src="./assets/img/card/cardIndustrials.png" alt="Industrials">
+                <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
+                    Semiconductors
+                </p>
+            </div>
+        </div>
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+            <div class="card d-flex flex-column">
+                <img class="card__img" src="./assets/img/card/cardInternet.png" alt="Internet">
+                <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
+                    Software & Internet
+                </p>
+            </div>
         </div>
     </div>
 </div>
