finished banner 2 section

--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
 <!--=============== BANNER ===============-->
 <div class="container-fluid mt-lg-3">
     <div class="row justify-content-center">
-        <div class="banner col-12 col-xl-10 position--relative">
+        <div class="banner col-12 col-xl-10">
             <img class="banner__img position--absolute h-100 w-100" src="./assets/img/banner/bannerLights.jpg"
                  alt="Lights">
             <div class="banner__points banner__points--top position--absolute"></div>
@@ -795,5 +795,24 @@
         </div>
     </div>
 </div>
+<!--=============== BANNER ===============-->
+<div class="container-fluid container-lg">
+    <div class="row">
+        <div class="col-12 d-flex flex-column align-items-center p-5">
+            <img class="banner__img position--absolute h-100 w-100" src="./assets/img/banner/bannerJob.jpg" alt="Job">
+            <h2 class="heading--two text--uppercase text--center text--white text--bold">
+                Find the right job for you
+            </h2>
+            <p class="text--xl text--white text--semi-bold text--center mt-4 mb-5">
+                Explore all the job opportunities currently available at Altran
+            </p>
+            <button class="btn btn--transparent btn--lg text--bold text--uppercase position--relative">
+                <span class="position--relative">Browse Job Offers</span>
+            </button>
+        </div>
+    </div>
+</div>
+<!--=============== SECTION TWITTER ===============-->
+
 </body>
 </html>
