added bg overlay

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <script type="text/javascript" src="./assets/js/scripts.js"></script>
     <title>Altran</title>
 </head>
-<body class="js--bg--overlay">
 
+<body class="position--relative">
+<div class="js--bg--overlay"></div>
 <!--=============== DESKTOP HEADER ===============-->
 <header class="header container d-none d-lg-block position--relative">
     <div class="row">
