fixed mobile header and menu

--- a/index.html
+++ b/index.html
@@ -462,12 +462,12 @@
 <!--=============== MOBILE HEADER ===============-->
 <header class="header container-fluid d-lg-none position--relative pt-4 pb-4">
     <div class="row">
-        <div class="col-12 d-flex justify-content-between">
-            <div class="d-flex align-items-center">
+        <div class="col-12 position--unset">
+            <div class="header--mobile d-flex align-items-center position--absolute js--header--mobile">
                 <div class="header--mobile__menu-icon header--mobile__menu-icon--closed mr-5 position--relative js--header--mobile__menu-icon"></div>
                 <img class="header--mobile__logo" src="./assets/img/logo.svg" alt="logo">
             </div>
-            <div class="d-flex">
+            <div class="d-flex justify-content-end">
                 <svg class="header--mobile__icon mr-3">
                     <use xlink:href="./assets/img/icons/sprites.svg#icon-search"></use>
                 </svg>
