added cards animation

--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
     </div>
 </div>
 <!--=============== SECTION INFOS ===============-->
-<div class="container mt-4 mb-5">
+<div class="section-infos container mt-4 mb-5 js--section-infos">
     <div class="row">
         <div class="col-12 col-md-4 d-flex flex-column align-items-start mt-3 mb-3 m-md-0">
             <h5 class="text--lg text--center text--uppercase text--bold w-100">
@@ -696,8 +696,8 @@
     </div>
 </div>
 <!--=============== SECTION CARDS ===============-->
-<div class="section-cards container-fluid container-lg pb-5">
-    <div class="row">
+<div class="section-cards container-fluid container-lg pb-5 js--section-cards">
+    <div id="cards" class="row">
         <div class="col-12">
             <h3 class="heading--three text--uppercase text--bold text--center mt-5">
                 Which sector do you work in?
@@ -706,7 +706,7 @@
                 We provide tailored solutions for each industry
             </h5>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center card--animated">
             <div class="card d-flex flex-column">
                 <img class="card__img" src="./assets/img/card/cardCar.png" alt="Car">
                 <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
@@ -714,7 +714,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center card--animated">
             <div class="card d-flex flex-column">
                 <img class="card__img" src="./assets/img/card/cardAirplane.png" alt="Airplane">
                 <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
@@ -722,7 +722,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center card--animated">
             <div class="card d-flex flex-column">
                 <img class="card__img" src="./assets/img/card/cardSpace.png" alt="Space">
                 <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
@@ -730,7 +730,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center card--animated">
             <div class="card d-flex flex-column">
                 <img class="card__img" src="./assets/img/card/cardRail.png" alt="Rail">
                 <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
@@ -738,7 +738,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center card--animated">
             <div class="card d-flex flex-column">
                 <img class="card__img" src="./assets/img/card/cardSunEnergy.png" alt="Energy">
                 <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
@@ -746,7 +746,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center card--animated">
             <div class="card d-flex flex-column">
                 <img class="card__img" src="./assets/img/card/cardIndustry.png" alt="Industry">
                 <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
@@ -754,7 +754,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center card--animated">
             <div class="card d-flex flex-column">
                 <img class="card__img" src="./assets/img/card/cardHeart.png" alt="Heart">
                 <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
@@ -762,7 +762,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center card--animated">
             <div class="card d-flex flex-column">
                 <img class="card__img" src="./assets/img/card/cardPhone.png" alt="Phone">
                 <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
@@ -770,7 +770,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center card--animated">
             <div class="card d-flex flex-column">
                 <img class="card__img" src="./assets/img/card/cardMonitor.png" alt="Monitor">
                 <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
@@ -778,7 +778,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center card--animated">
             <div class="card d-flex flex-column">
                 <img class="card__img" src="./assets/img/card/cardIndustrials.png" alt="Industrials">
                 <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
@@ -786,7 +786,7 @@
                 </p>
             </div>
         </div>
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center card--animated">
             <div class="card d-flex flex-column">
                 <img class="card__img" src="./assets/img/card/cardInternet.png" alt="Internet">
                 <p class="card__text flex-grow-1 text--uppercase text--bold p-3">
