finished banner and social animation

--- a/index.html
+++ b/index.html
@@ -797,24 +797,26 @@
     </div>
 </div>
 <!--=============== BANNER ===============-->
-<div class="container-fluid container-lg">
+<div class="section-banner container-fluid container-lg js--section-banner">
     <div class="row">
         <div class="col-12 d-flex flex-column align-items-center p-5">
             <img class="banner__img position--absolute h-100 w-100" src="./assets/img/banner/bannerJob.jpg" alt="Job">
-            <h2 class="heading--two text--uppercase text--center text--white text--bold">
+            <h2 class="heading--two invisible text--uppercase text--center text--white text--bold position--relative">
                 Find the right job for you
+                <span class="text--animated position--absolute js--heading--animated">Find the right job for you</span>
             </h2>
-            <p class="text--xl text--white text--semi-bold text--center mt-4 mb-5">
+            <p class="text--xl invisible text--white text--semi-bold text--center mt-4 mb-5 position--relative">
                 Explore all the job opportunities currently available at Altran
+                <span class="text--animated position--absolute js--text--animated">Explore all the job opportunities currently available at Altran</span>
             </p>
-            <button class="btn btn--transparent btn--lg text--bold text--uppercase position--relative">
+            <button class="btn btn--transparent btn--lg btn--animated text--bold text--uppercase position--relative js--section-banner__btn">
                 <span class="position--relative">Browse Job Offers</span>
             </button>
         </div>
     </div>
 </div>
 <!--=============== SECTION TWITTER ===============-->
-<div class="container mt-5">
+<div class="section-twitter container mt-5 js--section-twitter">
     <div class="row">
         <div class="col-12">
             <h2 class="heading-two text--center text--uppercase text--bold mb-5">
